# wavebin

./: .gitignore  CHANGELOG.md  README.md  a.sr  hatch.toml  pyproject.toml  setup.py  wavebin.spec
.github/ISSUE_TEMPLATE/: bug.md  from_app.md
docs/: CHANGELOG.md  CNAME  FORMATS.md  ISSUE.md  index.html  wavebin.drawio
samples/: data.txt  dual.txt  sample.txt
samples/DSOX1102G/: data.sr  uart.txt
samples/Keysight/: Keysight_DSOX1102G_1CH_20MSPS_1Mpts_UART.txt  Keysight_DSOX1102G_2CH_1GSPS_20Kpts_DIGITAL.txt
samples/pulseview/: metadata  sample.sr
samples/pulseview/1/: logic-1-1
samples/pulseview/2/: 2.sr  metadata
screenshots/: wavebin.drawio
wavebin/: __main__.py  config.py  enums.py  export.py  filters.py  interface.py  plot.py  tuples.py  version.rc  wave.py  wavebin.rc  wavebin.spec
wavebin/interface/: menubar.py  plot.py  plot_matplotlib.py  plot_pyqtgraph.py  plot_vispy.py  properties.py  toolbar.py  window.py
wavebin/qt/: app.py
