[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wavebin"
dynamic = ["version"]
description = "Oscilloscope waveform capture viewer"
readme = "README.md"
license = "MIT"
requires-python = ">3.10"
authors = [
    { name = "sam210723", email = "pypi@vksdr.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "appdirs>=1.4.4",
    "numpy>=1.26.4",
    "pyopengl-accelerate>=3.1.7",
    "pyopengl>=3.1.7",
    "pyqt6>=5.15.10",
    "pyqtgraph>=0.13.3",
    "qtawesome>=1.3.0",
    "requests>=2.31.0",
]

[project.scripts]
wavebin = "wavebin.__main__:main"

[project.urls]
Homepage = "https://github.com/sam210723/wavebin"

[tool.hatch.version]
path = "wavebin/__main__.py"

[tool.hatch.envs.default]
path = ".hatch"

[tool.hatch.build.targets.sdist]
include = ["/wavebin"]

[tool.hatch.build.targets.wheel]
packages = ["wavebin"]
