[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wavebin"
dynamic = ["version"]
description = "Oscilloscope waveform capture viewer"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "sam210723", email = "pypi@vksdr.com" },
]
keywords = [
    "waveform", "oscilloscope", "visualizer", "electronics",
    "keysight", "agilent", "rigol", "siglent",
    "pulseview", "pyvisa", "usb-tmc"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Visualization",

    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Natural Language :: English",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "appdirs>=1.4.4",
    "numpy>=1.26.4",
    "packaging>=23.2",
    "pyopengl-accelerate>=3.1.7",
    "pyopengl>=3.1.7",
    "pyqt6>=6.6.1",
    "pyqtgraph>=0.13.3",
    "pyserde>=0.13.2",
    "pywinstyles>=1.6",
    "qtawesome>=1.3.0"
]
scripts.wavebin = "wavebin.__main__:main"

[project.urls]
Homepage = "https://wavebin.vksdr.com/"
Repository = "https://github.com/sam210723/wavebin"

[tool.hatch]
version.path = "wavebin/__main__.py"
envs.default.path = ".hatch"
build.targets.wheel.packages = ["wavebin"]
build.targets.sdist.include = ["/wavebin"]
build.targets.sdist.exclude = ["wavebin.spec", "wavebin.rc",]
